@@ -26,8 +26,9 @@ Homepage: https://wiki.gnome.org/Projects/libsoup
 Standards-Version: 3.9.8
 
 Package: libsoup2.4-dev
-Architecture: any
 Section: libdevel
+Architecture: any
+Multi-Arch: same
 Depends: ${misc:Depends},
          libsoup2.4-1 (= ${binary:Version}),
          gir1.2-soup-2.4 (= ${binary:Version}),
@@ -120,8 +121,9 @@ Description: HTTP library implementation in C -- GNOME support library
  This package contains the GNOME support shared library.
 
 Package: libsoup-gnome2.4-dev
-Architecture: any
 Section: libdevel
+Architecture: any
+Multi-Arch: same
 Depends: ${misc:Depends},
          libsoup-gnome2.4-1 (= ${binary:Version}),
          libsoup2.4-dev (= ${binary:Version})
@@ -155,6 +157,7 @@ Description: HTTP library implementation in C -- GNOME support development files
 Package: libsoup2.4-doc
 Section: doc
 Architecture: all
+Multi-Arch: foreign
 Depends: ${misc:Depends}
 Suggests: libsoup2.4-dev
 Description: HTTP library implementation in C -- API Reference
@@ -182,6 +185,7 @@ Description: HTTP library implementation in C -- API Reference
 Package: gir1.2-soup-2.4
 Section: introspection
 Architecture: any
+Multi-Arch: same
 Depends: ${gir:Depends},
          ${shlibs:Depends},
          ${misc:Depends}
