@@ -1,6 +1,9 @@
 libsoup2.4 (2.56.0-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Install typelib files into multiarch paths.
+  * Mark gir1.2-soup-2.4, libsoup2.4-dev and libsoup-gnome2.4-dev as
+    Multi-Arch: same and libsoup2.4-doc as Multi-Arch: foreign.
 
  -- Michael Biebl <biebl@debian.org>  Mon, 19 Sep 2016 19:13:02 +0200
 
